--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     },
     "exports": {
         ".": {
-          "types": "./react-img-zoom-gdn.ts"
+          "types": "./react-img-zoom-gdn.d.ts"
         }
     },
     "keywords": [
